[package]
name = "rddl"
version = "0.1.0"
authors = ["Junfeng Liu <china.liujunfeng@gmail.com>"]
homepage = "https://github.com/J-F-Liu/rddl"
documentation = "https://docs.rs/crate/rddl/"
repository = "https://github.com/J-F-Liu/rddl.git"
license = "MIT"
readme = "README.md"
description = "Refined Data Description Language (RDDL) specification and parser library."

[dependencies]
pom = "0.7.0"
